--- a/theseus/index.html
+++ b/theseus/index.html
@@ -295,8 +295,8 @@
 
         <div class="resources-links" style="display:flex; justify-content:center; gap:20px; margin-bottom:20px;">
           <a href="https://doi.org/10.1007/978-3-031-96463-3_1" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
-          <a href="#" class="font-weight-bold">DATA</a>
-          <a href="https://github.com/kennethbunker/theseus/tree/main/chapter1" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
+          <a href="https://dataverse.harvard.edu/dataverse/theseus" class="font-weight-bold">DATA</a>
+          <a href="https://github.com/kennethbunker/theseus/" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
           <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
@@ -354,8 +354,8 @@
 
         <div class="resources-links" style="display:flex; justify-content:center; gap:20px; margin-bottom:20px;">
           <a href="https://doi.org/10.1007/978-3-031-96463-3_2" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
-          <a href="#" class="font-weight-bold">DATA</a>
-          <a href="https://github.com/kennethbunker/theseus/tree/main/chapter2" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
+          <a href="https://dataverse.harvard.edu/dataverse/theseus" class="font-weight-bold">DATA</a>
+          <a href="https://github.com/kennethbunker/theseus/" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
           <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
@@ -412,8 +412,8 @@
 
         <div class="resources-links" style="display:flex; justify-content:center; gap:20px; margin-bottom:20px;">
           <a href="https://doi.org/10.1007/978-3-031-96463-3_3" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
-          <a href="#" class="font-weight-bold">DATA</a>
-          <a href="https://github.com/kennethbunker/theseus/tree/main/chapter3" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
+          <a href="https://dataverse.harvard.edu/dataverse/theseus" class="font-weight-bold">DATA</a>
+          <a href="https://github.com/kennethbunker/theseus/" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
           <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
@@ -471,8 +471,8 @@
 
         <div class="resources-links" style="display:flex; justify-content:center; gap:20px; margin-bottom:20px;">
           <a href="https://doi.org/10.1007/978-3-031-96463-3_4" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
-          <a href="#" class="font-weight-bold">DATA</a>
-          <a href="https://github.com/kennethbunker/theseus/tree/main/chapter4" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
+          <a href="https://dataverse.harvard.edu/dataverse/theseus" class="font-weight-bold">DATA</a>
+          <a href="https://github.com/kennethbunker/theseus/" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
           <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
@@ -529,8 +529,8 @@
 
         <div class="resources-links" style="display:flex; justify-content:center; gap:20px; margin-bottom:20px;">
           <a href="https://doi.org/10.1007/978-3-031-96463-3_5" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
-          <a href="https://doi.org/10.7910/DVN/UNM2S7" target="_blank" rel="noopener noreferrer" class="font-weight-bold">DATA</a>
-          <a href="https://github.com/kennethbunker/theseus/tree/main/chapter5" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
+          <a href="https://dataverse.harvard.edu/dataverse/theseus" class="font-weight-bold">DATA</a>
+          <a href="https://github.com/kennethbunker/theseus/" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
           <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
@@ -590,8 +590,8 @@
 
         <div class="resources-links" style="display:flex; justify-content:center; gap:20px; margin-bottom:20px;">
           <a href="https://doi.org/10.1007/978-3-031-96463-3_6" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
-          <a href="https://doi.org/10.7910/DVN/JO4KUY" target="_blank" rel="noopener noreferrer" class="font-weight-bold">DATA</a>
-          <a href="https://github.com/kennethbunker/theseus/tree/main/chapter6" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
+          <a href="https://dataverse.harvard.edu/dataverse/theseus" class="font-weight-bold">DATA</a>
+          <a href="https://github.com/kennethbunker/theseus/" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
           <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
@@ -648,8 +648,8 @@
 
         <div class="resources-links" style="display:flex; justify-content:center; gap:20px; margin-bottom:20px;">
           <a href="https://doi.org/10.1007/978-3-031-96463-3_7" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
-          <a href="https://doi.org/10.7910/DVN/9MM5JG" target="_blank" rel="noopener noreferrer" class="font-weight-bold">DATA</a>
-          <a href="https://github.com/kennethbunker/theseus/tree/main/chapter7" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
+          <a href="https://dataverse.harvard.edu/dataverse/theseus" class="font-weight-bold">DATA</a>
+          <a href="https://github.com/kennethbunker/theseus/" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
           <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
@@ -766,8 +766,8 @@
 
         <div class="resources-links" style="display:flex; justify-content:center; gap:20px; margin-bottom:20px;">
           <a href="https://doi.org/10.1007/978-3-031-96463-3_9" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
-          <a href="https://doi.org/10.7910/DVN/0GROZS" target="_blank" rel="noopener noreferrer" class="font-weight-bold">DATA</a>
-          <a href="https://github.com/kennethbunker/theseus/tree/main/chapter9" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
+          <a href="https://dataverse.harvard.edu/dataverse/theseus" class="font-weight-bold">DATA</a>
+          <a href="https://github.com/kennethbunker/theseus/" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
           <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
@@ -825,8 +825,8 @@
 
         <div class="resources-links" style="display:flex; justify-content:center; gap:20px; margin-bottom:20px;">
           <a href="https://doi.org/10.1007/978-3-031-96463-3_10" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
-          <a href="#" class="font-weight-bold">DATA</a>
-          <a href="https://github.com/kennethbunker/theseus/tree/main/chapter10" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
+          <a href="https://dataverse.harvard.edu/dataverse/theseus" class="font-weight-bold">DATA</a>
+          <a href="https://github.com/kennethbunker/theseus/" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
           <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
@@ -883,8 +883,8 @@
 
         <div class="resources-links" style="display:flex; justify-content:center; gap:20px; margin-bottom:20px;">
           <a href="https://doi.org/10.1007/978-3-031-96463-3_11" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
-          <a href="#" class="font-weight-bold">DATA</a>
-          <a href="https://github.com/kennethbunker/theseus/tree/main/chapter11" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
+          <a href="https://dataverse.harvard.edu/dataverse/theseus" class="font-weight-bold">DATA</a>
+          <a href="https://github.com/kennethbunker/theseus/" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
           <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
@@ -942,8 +942,8 @@
 
         <div class="resources-links" style="display:flex; justify-content:center; gap:20px; margin-bottom:20px;">
           <a href="https://doi.org/10.1007/978-3-031-96463-3_12" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
-          <a href="https://doi.org/10.7910/DVN/JCFVYX" target="_blank" rel="noopener noreferrer" class="font-weight-bold">DATA</a>
-          <a href="https://github.com/kennethbunker/theseus/tree/main/chapter12" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
+            <a href="https://dataverse.harvard.edu/dataverse/theseus" class="font-weight-bold">DATA</a>
+          <a href="https://github.com/kennethbunker/theseus/" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
           <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
@@ -1000,11 +1000,11 @@
 
         <div class="resources-links" style="display:flex; justify-content:center; gap:20px; margin-bottom:20px;">
           <a href="https://doi.org/10.1007/978-3-031-96463-3_13" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
-          <a href="#" class="font-weight-bold">DATA</a>
-          <a href="https://github.com/kennethbunker/theseus/tree/main/chapter13" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
+          <a href="https://dataverse.harvard.edu/dataverse/theseus" class="font-weight-bold">DATA</a>
+          <a href="https://github.com/kennethbunker/theseus/" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
           <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
-
+        
         <div style="text-align:left; max-width:600px; margin:0 auto;">
           <p style="font-size:14px; line-height:1.6;">
             <strong>Abstract: </strong>The overwhelming rejection of the 2022 Constitutional proposal, with 62% voting against it, marked a transformative moment in the political trajectory of the nation. Initially supported by a strong mandate for reform, public sentiment shifted as the process revealed misalignment between the pragmatic priorities of the electorate and the ideological ambitions of the draft. A change in leadership and the shift from committee deliberations to plenary debates, which drew heightened public scrutiny and skepticism, worsened this disconnect. Perceptions of disorder, fueled by unconventional behavior of assembly members and amplified by media portrayal, further alienated voters. Contextual pressure, such as economic instability, increasing crime rates, and the lingering disillusionment stemming from the 2019 social unrest, compounded doubts. Meanwhile, the failure of the Boric administration to stabilize the process or address urgent concerns exacerbated mistrust. Apart from these factors, the adverse result reflected a misdiagnosis of an elite, which mistook the demand for a better quality of life for the eradication of neoliberalism and the wholesale replacement of the 1980 Constitution. The chapter concludes by underscoring the importance of managing trust and perception, aligning reform ambitions with public expectations, and balancing bold political goals with pragmatic governance when conducting reform.<br><br>
@@ -1059,8 +1059,8 @@
 
         <div class="resources-links" style="display:flex; justify-content:center; gap:20px; margin-bottom:20px;">
           <a href="https://doi.org/10.1007/978-3-031-96463-3_14" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
-          <a href="#" class="font-weight-bold">DATA</a>
-          <a href="https://github.com/kennethbunker/theseus/tree/main/chapter14" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
+          <a href="https://dataverse.harvard.edu/dataverse/theseus" class="font-weight-bold">DATA</a>
+          <a href="https://github.com/kennethbunker/theseus/" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
           <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
@@ -1117,8 +1117,8 @@
 
         <div class="resources-links" style="display:flex; justify-content:center; gap:20px; margin-bottom:20px;">
           <a href="https://doi.org/10.1007/978-3-031-96463-3_15" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
-          <a href="https://doi.org/10.7910/DVN/NRRSIX" target="_blank" rel="noopener noreferrer" class="font-weight-bold">DATA</a>
-          <a href="https://github.com/kennethbunker/theseus/tree/main/chapter15" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
+          <a href="https://dataverse.harvard.edu/dataverse/theseus" class="font-weight-bold">DATA</a>
+          <a href="https://github.com/kennethbunker/theseus/" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
           <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
@@ -1177,8 +1177,8 @@
 
         <div class="resources-links" style="display:flex; justify-content:center; gap:20px; margin-bottom:20px;">
           <a href="https://doi.org/10.1007/978-3-031-96463-3_16" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
-          <a href="https://doi.org/10.7910/DVN/S6243I" target="_blank" rel="noopener noreferrer" class="font-weight-bold">DATA</a>
-          <a href="https://github.com/kennethbunker/theseus/tree/main/chapter16" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
+          <a href="https://dataverse.harvard.edu/dataverse/theseus" class="font-weight-bold">DATA</a>
+          <a href="https://github.com/kennethbunker/theseus/" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
           <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
@@ -1235,8 +1235,8 @@
 
         <div class="resources-links" style="display:flex; justify-content:center; gap:20px; margin-bottom:20px;">
           <a href="https://doi.org/10.1007/978-3-031-96463-3_17" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
-          <a href="#" class="font-weight-bold">DATA</a>
-          <a href="https://github.com/kennethbunker/theseus/tree/main/chapter17" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
+          <a href="https://dataverse.harvard.edu/dataverse/theseus" class="font-weight-bold">DATA</a>
+          <a href="https://github.com/kennethbunker/theseus/" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
           <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
@@ -1296,8 +1296,8 @@
 
         <div class="resources-links" style="display: flex; justify-content: center; gap: 20px; margin-bottom: 20px;">
           <a href="#" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
-          <a href="#" target="_blank" rel="noopener noreferrer" class="font-weight-bold">DATA</a>
-          <a href="#" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
+          <a href="https://dataverse.harvard.edu/dataverse/theseus" class="font-weight-bold">DATA</a>
+          <a href="https://github.com/kennethbunker/theseus/" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
           <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
@@ -1354,8 +1354,8 @@
 
         <div class="resources-links" style="display: flex; justify-content: center; gap: 20px; margin-bottom: 20px;">
           <a href="#" target="_blank" rel="noopener noreferrer" class="font-weight-bold">FULL TEXT</a>
-          <a href="#" target="_blank" rel="noopener noreferrer" class="font-weight-bold">DATA</a>
-          <a href="#" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
+          <a href="https://dataverse.harvard.edu/dataverse/theseus" class="font-weight-bold">DATA</a>
+          <a href="https://github.com/kennethbunker/theseus/" target="_blank" rel="noopener noreferrer" class="font-weight-bold">CODE</a>
           <a href="https://kennethbunker.github.io/theseus/errata/errata.pdf" target="_blank" rel="noopener noreferrer" class="font-weight-bold text-danger">ERRATA</a>
         </div>
 
