--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -460,7 +460,23 @@
             <figcaption>"Chile será la tumba del neoliberalismo"<br><small><em>(YouTube / Galería CIMA)</em></small></figcaption>
           </figure>
         </div>
-        <div class="col-sm-6 col-md-4 mb-4">
+ <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="9. Baila.jpeg" target="_blank">
+              <img src="9. Baila.jpeg" class="thumb" alt="Baila">
+            </a>
+            <figcaption>"El que no baila, no pasa"<br><small><em>(Contexto / Agencia UNO)</em></small></figcaption>
+          </figure>
+        </div>
+       <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="9. Perro Matapacos.jpeg" target="_blank">
+              <img src="9. Perro Matapacos.jpeg" class="thumb" alt="Depolo">
+            </a>
+            <figcaption>"Perro Matapacos"<br><small><em>(Juan Pablo Cardenas)</em></small></figcaption>
+          </figure>
+        </div>
+<div class="col-sm-6 col-md-4 mb-4">
           <figure>
             <a href="9. ACAB.jpeg" target="_blank">
               <img src="9. ACAB.jpeg" class="thumb" alt="ACAB">
@@ -492,7 +508,7 @@
             <figcaption>Iglesia de la Asunción<br><small><em>(El Mostrador)</em></small></figcaption>
           </figure>
         </div>
-  </div>
+    </div>
 </section>
 
 
@@ -549,22 +565,6 @@
               <img src="10.2. The announcment.jpeg" class="thumb" alt="The announcement">
             </a>
             <figcaption>The first agreement is announced<br><small><em>(La Tercera / Richard Ulloa)</em></small></figcaption>
-          </figure>
-        </div>
- <div class="col-sm-6 col-md-4 mb-4">
-          <figure>
-            <a href="15. Baila.jpeg" target="_blank">
-              <img src="15. Baila.jpeg" class="thumb" alt="Baila">
-            </a>
-            <figcaption>"El que no baila, no pasa"<br><small><em>(Contexto / Agencia UNO)</em></small></figcaption>
-          </figure>
-        </div>
-       <div class="col-sm-6 col-md-4 mb-4">
-          <figure>
-            <a href="15. Perro Matapacos.jpeg" target="_blank">
-              <img src="15. Perro Matapacos.jpeg" class="thumb" alt="Depolo">
-            </a>
-            <figcaption>"Perro Matapacos"<br><small><em>(Juan Pablo Cardenas)</em></small></figcaption>
           </figure>
         </div>
       </div>
@@ -893,7 +893,15 @@
             <figcaption>Sebastián Depolo<br><small><em>(El Mercurio / Héctor Aravena)</em></small></figcaption>
           </figure>
         </div>
-    <div class="col-sm-6 col-md-4 mb-4">
+       <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="15. Toha.jpeg" target="_blank">
+              <img src="15. Toha.jpeg" class="thumb" alt="Jara">
+            </a>
+            <figcaption>Carolina Tohá on the border<br><small><em>(Publimetro)</em></small></figcaption>
+          </figure>
+        </div>
+        <div class="col-sm-6 col-md-4 mb-4">
           <figure>
             <a href="15. Duran.jpeg" target="_blank">
               <img src="15. Duran.jpeg" class="thumb" alt="Duran">
