--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -917,7 +917,15 @@
             <figcaption>Jeannette Jara<br><small><em>(El Líbero)</em></small></figcaption>
           </figure>
         </div>
-        <div class="col-sm-6 col-md-4 mb-4">
+       <div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="15. Crispi.jpeg" target="_blank">
+              <img src="15. Crispi.jpeg" class="thumb" alt="Crispi">
+            </a>
+            <figcaption>Miguel Crispi<br><small><em>(Ex Ante / Agencia Uno)</em></small></figcaption>
+          </figure>
+        </div>
+      <div class="col-sm-6 col-md-4 mb-4">
           <figure>
             <a href="15. First Retiro.jpeg" target="_blank">
               <img src="15. First Retiro.jpeg" class="thumb" alt="Depolo">
