--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -407,6 +407,31 @@
   </div>
 </section>
 
+<!-- Jump to chapters -->
+<div class="alert alert-light border jumpbar" id="chapters">
+  <div class="d-flex flex-wrap align-items-center gap-2">
+    <strong class="mr-2">Jump to chapter:</strong>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch1">1</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch2">2</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch3">3</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch4">4</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch5">5</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch6">6</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch7">7</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch8">8</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch9">9</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch10">10</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch11">11</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch12">12</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch13">13</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch14">14</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch15">15</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch16">16</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
+  </div>
+</div>
 
     <!-- Chapter 9 -->
     <section id="ch9" class="chapter-anchor">
