--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -506,15 +506,23 @@
             <a href="9. ACAB.jpeg" target="_blank">
               <img src="9. ACAB.jpeg" class="thumb" alt="ACAB">
             </a>
-            <figcaption>ACAB"<br><small><em>(Resumen Latinoamericano)</em></small></figcaption>
+            <figcaption>ACAB<br><small><em>(Resumen Latinoamericano)</em></small></figcaption>
           </figure>
         </div>
-        <div class="col-sm-6 col-md-4 mb-4">
+<div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="9. Treinta Pesos.jpeg" target="_blank">
+              <img src="9. Treinta Pesos.jpeg" class="thumb" alt="ACAB">
+            </a>
+            <figcaption>"No son treinta pesos, son treinta años"<br><small><em>(Kaosenlared)</em></small></figcaption>
+          </figure>
+        </div>
+    <div class="col-sm-6 col-md-4 mb-4">
           <figure>
             <a href="9. Resistencia.jpeg" target="_blank">
               <img src="9. Resistencia.jpeg" class="thumb" alt="Resistencia">
             </a>
-            <figcaption>"Protests"<br><small><em>(Pablo Rojas Madariaga/NurPhoto/PA Image)</em></small></figcaption>
+            <figcaption>"La primera línea"<br><small><em>(Pablo Rojas Madariaga/NurPhoto/PA Image)</em></small></figcaption>
           </figure>
         </div>
         <div class="col-sm-6 col-md-4 mb-4">
