--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -517,7 +517,23 @@
             <figcaption>"No son treinta pesos, son treinta años"<br><small><em>(Kaosenlared)</em></small></figcaption>
           </figure>
         </div>
-    <div class="col-sm-6 col-md-4 mb-4">
+<div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="9. Neoliberales.jpeg" target="_blank">
+              <img src="9. Neoliberales.jpeg" class="thumb" alt="ACAB">
+            </a>
+            <figcaption>"Fuera Neoliberales"<br><small><em>(La Razón)</em></small></figcaption>
+          </figure>
+        </div>
+<div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="9. Piñera.jpeg" target="_blank">
+              <img src="9. Piñera.jpeg" class="thumb" alt="ACAB">
+            </a>
+            <figcaption>"Renuncia Piñera"<br><small><em>(Qué Pasa)</em></small></figcaption>
+          </figure>
+        </div>
+<div class="col-sm-6 col-md-4 mb-4">
           <figure>
             <a href="9. Resistencia.jpeg" target="_blank">
               <img src="9. Resistencia.jpeg" class="thumb" alt="Resistencia">
