--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -469,20 +469,20 @@
             <figcaption>"Un violador en tu camino"<br><small><em>(Martin Bernetti/AFP via Getty Images)</em></small></figcaption>
           </figure>
         </div>
-        <div class="col-sm-6 col-md-4 mb-4">
+<div class="col-sm-6 col-md-4 mb-4">
+          <figure>
+            <a href="9. Treinta Pesos.jpeg" target="_blank">
+              <img src="9. Treinta Pesos.jpeg" class="thumb" alt="ACAB">
+            </a>
+            <figcaption>"No son treinta pesos, son treinta años"<br><small><em>(Kaosenlared)</em></small></figcaption>
+          </figure>
+        </div>
+<div class="col-sm-6 col-md-4 mb-4">
           <figure>
             <a href="9. Dignidad.jpeg" target="_blank">
               <img src="9. Dignidad.jpeg" class="thumb" alt="Dignidad">
             </a>
             <figcaption>"Dignidad"<br><small><em>(Página 19)</em></small></figcaption>
-          </figure>
-        </div>
-        <div class="col-sm-6 col-md-4 mb-4">
-          <figure>
-            <a href="9. Tumba Neoliberalismo.jpeg" target="_blank">
-              <img src="9. Tumba Neoliberalismo.jpeg" class="thumb" alt="No estamos en guerra">
-            </a>
-            <figcaption>"Chile será la tumba del neoliberalismo"<br><small><em>(YouTube / Galería CIMA)</em></small></figcaption>
           </figure>
         </div>
  <div class="col-sm-6 col-md-4 mb-4">
@@ -493,7 +493,7 @@
             <figcaption>"El que no baila, no pasa"<br><small><em>(Contexto / Agencia UNO)</em></small></figcaption>
           </figure>
         </div>
-       <div class="col-sm-6 col-md-4 mb-4">
+<div class="col-sm-6 col-md-4 mb-4">
           <figure>
             <a href="9. Perro Matapacos.jpeg" target="_blank">
               <img src="9. Perro Matapacos.jpeg" class="thumb" alt="Depolo">
@@ -511,10 +511,10 @@
         </div>
 <div class="col-sm-6 col-md-4 mb-4">
           <figure>
-            <a href="9. Treinta Pesos.jpeg" target="_blank">
-              <img src="9. Treinta Pesos.jpeg" class="thumb" alt="ACAB">
+            <a href="9. Tumba Neoliberalismo.jpeg" target="_blank">
+              <img src="9. Tumba Neoliberalismo.jpeg" class="thumb" alt="No estamos en guerra">
             </a>
-            <figcaption>"No son treinta pesos, son treinta años"<br><small><em>(Kaosenlared)</em></small></figcaption>
+            <figcaption>"Chile será la tumba del neoliberalismo"<br><small><em>(YouTube / Galería CIMA)</em></small></figcaption>
           </figure>
         </div>
 <div class="col-sm-6 col-md-4 mb-4">
@@ -522,7 +522,7 @@
             <a href="9. Neoliberales.jpeg" target="_blank">
               <img src="9. Neoliberales.jpeg" class="thumb" alt="ACAB">
             </a>
-            <figcaption>"Fuera Neoliberales"<br><small><em>(La Razón)</em></small></figcaption>
+            <figcaption>"No más Neoliberales"<br><small><em>(La Razón)</em></small></figcaption>
           </figure>
         </div>
 <div class="col-sm-6 col-md-4 mb-4">
@@ -530,7 +530,7 @@
             <a href="9. Piñera.jpeg" target="_blank">
               <img src="9. Piñera.jpeg" class="thumb" alt="ACAB">
             </a>
-            <figcaption>"Renuncia Piñera"<br><small><em>(Qué Pasa)</em></small></figcaption>
+            <figcaption>"Piñera Asesino"<br><small><em>(Qué Pasa)</em></small></figcaption>
           </figure>
         </div>
 <div class="col-sm-6 col-md-4 mb-4">
