--- a/theseus/images/index.html
+++ b/theseus/images/index.html
@@ -67,23 +67,7 @@
 
     /* Anchor offset */
     .chapter-anchor { scroll-margin-top: 80px; }
-  
-  /* Hide captions, description area */
-.glightbox-clean .gdesc,
-.glightbox-clean .gprev,
-.glightbox-clean .gnext,
-.glightbox-clean .gclose {
-  background: rgba(0,0,0,0.4);
-  border-radius: 50%;
-}
-
-/* Add subtle frame + shadow around image */
-.glightbox-container .gslide img {
-  border: 6px solid #fff;
-  border-radius: 8px;
-  box-shadow: 0 8px 30px rgba(0,0,0,0.3);
-}
-</style>
+  </style>
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
 <script src="https://cdn.jsdelivr.net/npm/glightbox/dist/js/glightbox.min.js"></script>
@@ -140,6 +124,7 @@
     </div>
 
 
+
    <div class="container">
     <!-- Chapter 2 -->
     <section id="ch2" class="chapter-anchor">
@@ -147,8 +132,8 @@
       <div class="row">
         <div class="col-sm-6 col-md-4 mb-4">
           <figure>
-            <a href="2. Allende.jpeg" class="glightbox">
-            <img src="2. Allende.jpeg" class="thumb" alt="Allende">
+            <a href="2. Allende.jpeg" target="_blank">
+              <img src="2. Allende.jpeg" class="thumb" alt="2005">
             </a>
             <figcaption>Salvador Allende (1970-1973)<br><small><em>(BCN)</em></small></figcaption>
           </figure>
